RESULTS/AutoSpec/raw_results/out-4o-oopsla/036_0004/036_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/036_0004/036_merged.c:35:5: error: unterminated comment
   35 |     /*@;
      |     ^
